--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_otp_text_field: ^1.1.0+2
   image_picker: ^0.8.6+3
   flutter_secure_storage: ^8.0.0
+  open_mail_app: ^0.4.5
+  like_button: ^2.0.5
+  story_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
