--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.2
   dio: ^5.0.1
-  flutter_otp_text_field: ^1.1.0+2
+  flutter_otp_text_field: ^1.1.1
   image_picker: ^0.8.6+3
   flutter_secure_storage: ^8.0.0
   open_mail_app: ^0.4.5
@@ -46,6 +46,7 @@ dependencies:
   story_view: ^0.14.0
   jiffy: ^5.0.1
   cached_network_image: ^3.2.3
+  lottie: ^2.2.0
 
 dev_dependencies:
   flutter_test:
