--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,11 @@ dependencies:
   cached_network_image: ^3.2.3
   lottie: ^2.2.0
   slide_drawer: ^1.0.3
-
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
+  razorpay_flutter: ^1.3.4
+  flutter_rating_bar: ^4.0.1
+  firebase_messaging: ^14.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
